--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>National Institute of Technology, Calicut</h2>
 
         </div>
-        <div class="speakers">
+        <div class="speakers" style="min-height: 700px">
             <h1 class="center">Speakers</h1>
             <div class="box">
                 <div class="spk"><p>Athena</p><img src="./images/speakers/ath.jpg" /></div>
@@ -33,12 +33,13 @@
                 <div class="spk"><p>Sreeja</p><img src="./images/speakers/sre.jpg" /></div>
                 <div class="spk"><p>Rohit</p><img src="./images/speakers/rohi.jpg" /></div>
             </div>
-            <hr>
+            
         </div>
         <div class="contactus">
+            <hr>
             <h1 class="center">Contact Us</h1>
             <div class="container-fluid">
-                <div class="row">
+                <div class="row" style="min-height: 250px">
                     <div class="col-md-6">
                         <h2 class="center">Coordinators</h2>
                         <div class="center">
