--- a/index.html
+++ b/index.html
@@ -19,8 +19,24 @@
             <div class="back"></div>
             <div class="front"></div>
             <div class="overlay"></div>
-            <h1>Inter NIT Summit</h1>
+            <h1>Confluence '16</h1>
             <h2>National Institute of Technology, Calicut</h2>
+            
+            <div class="container-fluid">
+              <div class="row">
+					<div class="col-md-4 col-md-offset-8">
+						<div class="dates">
+					    <h3>Important Dates</h3>
+					    <ul>
+					     <li>Registrations open : 15<sup>th</sup> Nov 2015</li>
+					     <li>Last date for Registration: 1<sup>st</sup> Dec 2015</li>
+					     <li>Confirmation: 15<sup>th</sup> Dec 2015</li>
+					    </ul>
+					    </div>
+					</div>
+              </div>
+            </div>
+            
 
         </div>
         <div class="speakers" style="min-height: 700px">
